# enagar

./: .editorconfig  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc.json  .trivyignore  AGENT.md  ARCHITECTURE.md  MunicipalApp.jsx  Phase2Revisit.md  README.md  ROADMAP.md  commitlint.config.cjs  en18-2026-06-09-followup.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.hallmark/: log.json
docs/: charter.md  design-system.md  form-schema.md  glossary.md  roadmap-citizen-unified-hub.md  service-catalogue.md  workflow-designations.md
infrastructure/: .env.example  .env.production.example  docker-compose.keycloak-demo.override.example.yml  docker-compose.unified-portal-demo.override.example.yml  docker-compose.yml
scripts/: audit-workflow-templates.ts  build-unified-portal-demo.mjs  capture-operator-help-screenshots.ps1  check-sahayak-kb-seed.mjs  citizen-book-other-facility.ps1  en18-check-invoices.mjs  en18-check-state.mjs  en18-cleanup-zero-amount.mjs  en18-compare-snapshots.mjs  en18-distribution.mjs  en18-dump-apps.mjs  en18-inspect-apps-subject.mjs  en18-inspect-citizen-9836177767.mjs  en18-inspect-snapshots.mjs  en18-test-lookup.mjs  (+33 more)
services/rag-indexer/: README.md  package.json  pyproject.toml  requirements.txt  run-indexer.ps1
services/rag-indexer/src/enagar_rag_indexer/: __init__.py  chunking.py  config.py  db.py  embeddings.py  indexer.py  main.py  qdrant_store.py
services/rag-indexer/tests/: test_chunking.py  test_health.py
(+1160 files in other folders)
